[Fix] Light mode card title not showing

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -13925,4 +13925,8 @@ label {
   color: #ffffff;
 }
 
+body:not(.darkmode) .card-title {
+  color: #283046 !important;
+}
+
 /*# sourceMappingURL=dashboard.css.map*/
